hphp/hack/test/typecheck/function_pointer/fun_and_clsmeth_disabled/fun_disabled.php
<?hh

function test(): void {
  fun('test');
}
